--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nav-head">THE BOX</div>
           </a>
           <div class="nav-items">
-            <a href="javascript:void(0);" class="icon hamberger" onclick="myFunction()">
+            <a href="#" class="icon hamberger" onclick="myFunction()">
               <i class="fa-solid fa-bars " style="color: #271f51;"></i>
             </a>
             <div>
